fix: add word break styles to container for text wrapping
(cherry picked from commit 0a3087958136fee18dd73630f31c3d83158134c7)

# Conflicts:
#	gravitee-apim-console-webui/src/management/api/documentation-v4/components/documentation-edit-page/documentation-edit-page.component.scss
(cherry picked from commit d5e4f032b5d5b097cd1cf24d007daa019750e509)

# Conflicts:
#	gravitee-apim-portal-webui-next/src/components/page/page-markdown/page-markdown.component.scss

--- a/gravitee-apim-portal-webui/src/app/components/gv-page-markdown/gv-page-markdown.component.css
+++ b/gravitee-apim-portal-webui/src/app/components/gv-page-markdown/gv-page-markdown.component.css
@@ -100,3 +100,9 @@ app-gv-markdown-toc {
   color: var(--gv-theme-font-color-light, #ffffff);
   padding-top: 6px;
 }
+
+:host ::ng-deep table td {
+  word-break: break-all; /* Break text at any character, including between letters */
+  overflow-wrap: break-word; /* Ensure text will break in the middle of words if needed */
+  white-space: normal;
+}
